--- a/main.css
+++ b/main.css
@@ -3,6 +3,8 @@
     --color-black: #121212;
     --color-green1: greenyellow;
     --color-gray: #ccc;
+    /*Colors-bgs*/
+    --color-gray2: #35353D;
 }
 
 * {
@@ -10,6 +12,10 @@
     padding: 0;
     margin: 0;
     font-family: 'Arial', Helvetica, sans-serif;
+}
+
+body {
+    background-color: #3F3F3F;
 }
 
 /*HEADER*/
@@ -44,6 +50,10 @@ header li{
 }
 /*Main*/
 
+main {
+    margin: 0 auto;
+}
+
 .content-page,
 .content-page-container-2,
 .content-page-container-3,
@@ -51,37 +61,64 @@ header li{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-}
-
-main {
-    width: 1280px;
-    margin: 0 auto;
-}
-
-.main-content h2,
-.economia-content h2,
-.entretenimento-content h2,
-.tecnologia-content h2{
-    text-align: center;
-    background-color: var(--color-green1);
-    color: var(--color-black);
-    padding: 5px 0px;
-    border-radius: 10px;
+    padding: 1rem;
 }
 
 .main-content,
-.tecnologia-content,
 .economia-content,
-.entretenimento-content{
-    margin-bottom: 15px;
+.entretenimento-content,
+.tecnologia-content{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    background-color: var(--color-green1);
+    color: var(--color-black);
+    margin: 1rem 5rem;
+    padding: 8px;
+    border-radius: 10px;
 }
 
-.artigos img {
+.tecnologia-content,
+.economia-content {
+    background-color: var(--color-black);
+    color: var(--color-white);
+}
+
+/*Seções*/
+
+.conteudo-de-sport,
+.conteudo-de-entretenimento{
+    background-color: var(--color-black);
+}
+
+.conteudo-de-economia,
+.conteudo-de-tecnologia {
+    background-color: var(--color-green1);
+}
+
+/*Artigos*/
+
+.artigos img,
+.destaque img {
     height: 200px;
     width: 100%;
+    border-radius: 1rem;
+    cursor: pointer;
 }
 
-.artigos h3 {
+.artigos img:hover {
+    height: 250px;
+    border: 3px solid var(--color-green1);
+}
+
+.destaque img:hover {
+    height: 250px;
+    border: 3px solid var(--color-black);
+}
+
+
+.artigos h3,
+.destaque h3 {
     margin-top: 5px;
     margin-bottom: 2px;
     width: 100%;
@@ -89,10 +126,17 @@ main {
     border-radius: 10px;
     font-weight: bold;
     font-size: 1.1rem;
+    padding: 0.8rem;
     background-color: var(--color-green1);
 }
 
-.artigos a {
+.destaque h3 {
+    background-color: var(--color-black);
+    color: #fff;
+}
+
+.artigos a,
+.destaque a {
     background-color: var(--color-green1);
     font-weight: bold;
     font-style: italic;
@@ -102,28 +146,57 @@ main {
     text-transform: uppercase;
     text-align: center;
     width: 70%;
+    border-radius: 1rem;
+    transition: 0.3s;
 }
 
-.artigos p {
-    margin: 15px 0px;
+.artigos a:hover {
+    font-size: 1.1rem;
+    color: var(--color-white);
+    background-color: #3F3F3F;
+}
+
+.destaque a:hover {
+    font-size: 1.1rem;
+    color: var(--color-black);
+    background-color: #fff;
+}
+
+.destaque a {
+    color: var(--color-white);
+    background-color: var(--color-black);
+}
+
+.artigos p,
+.destaque p {
+    margin: 1rem;
     font-size: 0.8rem;
+    color: #fff;
     width: 90%;
 }
 
-.artigos header time {
+.destaque p {
     color: var(--color-black);
+}
+
+.artigos header time,
+.destaque header time {
+    color: var(--color-white);
     font-size: 0.75rem;
+    padding-left: 1rem;
 }
 
-.button-plus {
-    display: flex;
-    justify-content: center;
+.destaque header time{
+    color: var(--color-black);
 }
 
-.artigos {
+.artigos,
+.destaque {
     width: 30%;
     margin-bottom: 20px;
 }
+
+/*Footer*/
 
 footer {
     background-color: var(--color-black);
@@ -137,6 +210,7 @@ p {
 }
 
 .conteudo-footer{
+    margin-top: 2rem;
     display: flex;
     justify-content: center;
 }
@@ -144,4 +218,11 @@ p {
 .informacao {
     margin: 2rem;
     text-align: center;
+}
+
+/*buttons*/
+
+.button-plus {
+    display: flex;
+    justify-content: center;
 }
